Add example streamInput

--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
 
     <label for="streamInput">Stream Schedule (comma-separated character names per line):</label>
     <br>
-    <textarea id="streamInput" rows="10" cols="30"></textarea>
+    <textarea id="streamInput" rows="10" cols="30">Kozue,Tsuzuri
+Kozue, Megumi
+1021, 1022,1023</textarea>
     <br>
     <button id="process">Process</button>
     <pre id="output"></pre>
