Change name to distributor

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stream Stars Allocation</title>
+    <title>Stream Stars Distributor</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -234,7 +234,7 @@
     </script>
 </head>
 <body>
-    <h1>Stream Stars Allocation</h1>
+    <h1>Stream Stars Distributor</h1>
     <table id="charTable">
         <tr><th>Name</th><th>Fan Level</th><th>Exp</th></tr>
         <tr><td><input type="text" value="Ginko" disabled></td><td><input type="number" value="1"></td><td><input type="number" value="0"></td></tr>
