--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         }
 
                         const aPossiblePoints = a.getPossiblePoints();
-                        const bPossiblePoints = b.getPossiblePoints();s
+                        const bPossiblePoints = b.getPossiblePoints();
 
                         return aPossiblePoints - bPossiblePoints;
                     })[0];
